--- a/examples/mvt/styles.css
+++ b/examples/mvt/styles.css
@@ -19,3 +19,12 @@ body {
   display: inline-block;
   position: relative;
 }
+.display-canvas {
+  background-color: #FFFFFF;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
