--- a/examples/macrostrat/styles.css
+++ b/examples/macrostrat/styles.css
@@ -21,6 +21,11 @@ body {
   float: left;
   height: 100%;
 }
+.container {
+  padding: 0;
+  display: inline-block;
+  position: relative;
+}
 #map {
   width: 512px;
   height: 512px;
