--- a/examples/sandwich/styles.css
+++ b/examples/sandwich/styles.css
@@ -9,17 +9,22 @@ body {
   border: 0;
   margin: 0;
 }
-#zxy {
-  width: 512px;
-  margin-top: 20px;
-  text-align: center;
-}
 .leftSide {
   padding: 0;
   display: inline-block;
   position: relative;
   float: left;
   height: 100%;
+}
+#zxy {
+  width: 512px;
+  margin-top: 20px;
+  text-align: center;
+}
+.container {
+  padding: 0;
+  display: inline-block;
+  position: relative;
 }
 #map {
   width: 512px;
